--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -307,7 +307,7 @@ input[type=file] {
     font-size: 0.7em;
     display: flex;
     flex-direction: row;
-    background: #0000009c;
+    background: #7f7f7fc2;
     min-width: 15px;
     border-radius: 10px;
     right: 0;
@@ -351,7 +351,7 @@ input[type=file] {
     font-size: 0.7em;
     display: flex;
     flex-direction: row;
-    background: #0000009c;
+    background: #7f7f7fc2;
     min-width: 15px;
     border-radius: 10px;
     left: 0;
@@ -752,7 +752,7 @@ scrollbar-width: none;  /* Firefox */
   filter: drop-shadow(2px 4px 6px black);
   z-index: 10;
   & > div{
-    border-radius: 50%;
+    border-radius: 8px;
     height: 30px;
     width: 30px;
     display: flex;
@@ -799,7 +799,7 @@ scrollbar-width: none;  /* Firefox */
     font-size: 0.7em;
     display: flex;
     flex-direction: row;
-    background: #0000009c;
+    background: #7f7f7fc2;
     min-width: 15px;
     border-radius: 10px;
   }
