--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -191,8 +191,8 @@
     
       <template id="location-message-template" type="text/template">
         <li class="location__message">
-          <div class="location__message__title title">
-            <a id="retlocflex" class='tenth before after' href="{{url}}" target="_blank"><img id="retlocation" src="/images/icons8-place-marker.gif" alt="" srcset="">{{from}}'s location</a>
+          <div class="location__message__title">
+            <a id="retlocflex" href="{{url}}" target="_blank"><i class="fa-solid fa-location-dot"></i>{{from}}'s location</a>
           </div>
         </li>
       </template>
