--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,6 @@
   src: url("./../fonts/comic-webfont.woff2");
 }
 
-
 :root {
   --primary-dark: #111d2a;
   --foreground-dark: #ffffff;
@@ -69,18 +68,18 @@ body {
 }
 
 .intro h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   text-align: center;
 }
 
 .wrapper {
-  margin: 1em 0;
+  margin: 1rem 0;
 }
 
 a {
   color: var(--secondary);
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 h3 {
@@ -104,7 +103,7 @@ button,
 button:hover {
   border: none;
   color: var(--foreground);
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 .chat__messages ul {
@@ -148,7 +147,7 @@ button:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 900;
   gap: 5px;
   overflow-x: scroll;
@@ -171,7 +170,7 @@ ul {
 
 h3 {
   text-align: center;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   color: var(--secondary);
 }
 
@@ -219,7 +218,7 @@ button:disabled {
 .chat__sidebar li {
   padding: 7px 0 5px 0;
   color: var(--foreground);
-  font-size: 0.7em;
+  font-size: 0.8rem;
   margin: 5px;
 }
 
@@ -228,7 +227,7 @@ button:disabled {
   margin: 10px 20px;
   text-align: left;
   color: var(--secondary);
-  font-size: 0.9em;
+  font-size: 0.9rem;
   text-align: center;
 }
 
@@ -306,7 +305,7 @@ input[type=file] {
 }
 
 .sent {
-  font-size: 0.6em;
+  font-size: 0.6rem;
   color: var(--secondary);
   position: relative;
   right: 5px;
@@ -335,14 +334,14 @@ input[type=file] {
 }
 
 .fa-paper-plane, .fa-location-crosshairs, .fa-image {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   padding: 5px;
   color: var(--secondary);
   cursor: pointer;
 }
 
-.fa-paper-plane {
-  font-size: 2em;
+.fa-location-dot {
+  font-size: 2rem;
 }
 
 .image {
@@ -366,7 +365,7 @@ input[type=file] {
 .image .reactions {
   position: absolute;
   bottom: 0px;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -448,7 +447,7 @@ input[type=file] {
 .my__image .reactions {
   position: absolute;
   bottom: 0px;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -493,7 +492,7 @@ input[type=file] {
 }
 
 [class^="react-or-"] .emoticon {
-  font-size: 1.3em;
+  font-size: 1.3rem;
 }
 
 [class^="react-or-"] .emoticon:hover {
@@ -610,44 +609,12 @@ input[type=file] {
           justify-content: center;
 }
 
-.location__message {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.location__message__title {
-  padding-left: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 5px;
-  background: black;
-  mix-blend-mode: screen;
-  -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
 .server__message {
   text-align: center;
 }
 
 .server__message__body {
-  font-size: 0.7em;
+  font-size: 0.7rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -666,7 +633,7 @@ input[type=file] {
 .menu {
   display: block;
   color: limegreen;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 
 .menu:hover {
@@ -699,7 +666,7 @@ input[type=file] {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  font-size: 0.6em;
+  font-size: 0.6rem;
   text-align: center;
   color: gray;
   position: absolute;
@@ -746,10 +713,9 @@ input[type=file] {
 
 #typingindicator {
   list-style-type: none;
-  color: grey;
-  font-size: 0.7em;
+  color: #adadad;
+  font-size: 0.8rem;
   padding: 0 0 0 10px;
-  height: 25px;
 }
 
 #typingindicator li {
@@ -774,13 +740,6 @@ input[type=file] {
           filter: invert(1);
 }
 
-#retlocation {
-  -webkit-filter: invert(1);
-          filter: invert(1);
-  height: 40px;
-  width: 40px;
-}
-
 #retlocflex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -788,6 +747,14 @@ input[type=file] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 2px;
 }
 
 #messages {
@@ -860,7 +827,6 @@ input[type=file] {
   background: #26313d;
   padding: 10px 15px;
   border-radius: 25px;
-  font-size: 0.7em;
 }
 
 #messages .message .textMessage:hover::after {
@@ -871,7 +837,6 @@ input[type=file] {
   background: var(--secondary);
   padding: 10px 15px;
   border-radius: 25px;
-  font-size: 0.7em;
 }
 
 #messages .main-message {
@@ -895,8 +860,9 @@ input[type=file] {
 
 #messages .replyMessage {
   padding: 10px 15px 25px 10px;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   background: #3f5266;
+  color: #d1d1d1;
   border-radius: 15px 15px 15px 0px;
   z-index: 1;
 }
@@ -958,7 +924,7 @@ input[type=file] {
 }
 
 #messages .title h3 {
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 #messages .message__title h3 {
@@ -1030,7 +996,7 @@ input[type=file] {
   transform: translate(-50%, -50%);
   border-radius: 25px;
   gap: 10px;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   -webkit-filter: drop-shadow(2px 4px 6px black);
           filter: drop-shadow(2px 4px 6px black);
   z-index: 10;
@@ -1105,7 +1071,7 @@ input[type=file] {
 .message .reactions, .my__message .reactions {
   position: absolute;
   bottom: 0px;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1138,7 +1104,7 @@ input[type=file] {
   background: #000000bb;
   padding: 10px;
   border-radius: 15px;
-  font-size: 0.6em;
+  font-size: 0.6rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 100;
@@ -1169,7 +1135,7 @@ input[type=file] {
   border-radius: 25px;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
-  font-size: 0.6em;
+  font-size: 0.8rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 100;
@@ -1182,12 +1148,12 @@ input[type=file] {
 }
 
 .newmessagepopup img {
-  height: 20px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
 }
 
 .newmessagepopup .msg {
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 .newmessagepopup:hover {
@@ -1246,14 +1212,19 @@ input[type=file] {
   width: 100%;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
+  font-size: 0.8rem;
 }
 
 .chat__footer #message-form #textbox:focus {
   outline: none;
 }
 
+.object {
+  font-size: 0.8rem;
+}
+
 .maxuser {
-  font-size: 0.7em;
+  font-size: 0.8rem;
   position: relative;
   right: 0;
   width: 100%;
@@ -1279,7 +1250,7 @@ input[type=file] {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: 1em;
+  font-size: 1rem;
   -webkit-backdrop-filter: blur(2px);
           backdrop-filter: blur(2px);
   -webkit-filter: drop-shadow(2px 4px 6px black);
@@ -1370,11 +1341,11 @@ img {
 
 .toast-popup .toast-popup-replying-to .toast-popup-name {
   color: var(--secondary);
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 .toast-popup .toast-popup-replying-to .toast-popup-message {
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 .toast-popup .toast-popup-close {
