--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -52,19 +52,19 @@ body {
   align-items: center;
   padding-bottom: 100px;
   h2{
-    font-size: 1.5em;
+    font-size: 1.5rem;
     text-align: center;
   }
 }
 
 .wrapper {
-  margin: 1em 0;
+  margin: 1rem 0;
 }
 
 a{
   color: var(--secondary);
   text-decoration: none;
-  font-size: 0.7em;
+  font-size: 0.8rem;
 }
 
 
@@ -88,7 +88,7 @@ button,
 button:hover {
   border: none;
   color: var(--foreground);
-  font-size: 0.8em;
+  font-size: 0.8rem;
 }
 
 .chat__messages ul {
@@ -112,7 +112,7 @@ button:hover {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 900;
     gap: 5px;
     overflow-x: scroll;
@@ -136,7 +136,7 @@ ul {
 
 h3 {
   text-align: center;
-  font-size: 0.7em;
+  font-size: 0.8rem;
   color: var(--secondary);
 }
 
@@ -184,7 +184,7 @@ button:disabled {
   //background: var(--focus);
   padding: 7px 0 5px 0;
   color: var(--foreground);
-  font-size: 0.7em;
+  font-size: 0.8rem;
   //border-radius: 5px;
   margin: 5px;
 }
@@ -194,7 +194,7 @@ button:disabled {
   margin: 10px 20px;
   text-align: left;
   color: var(--secondary);
-  font-size: 0.9em;
+  font-size: 0.9rem;
   text-align: center;
 }
 
@@ -260,7 +260,7 @@ input[type=file] {
 }
 
 .sent{
-  font-size: 0.6em;
+  font-size: 0.6rem;
   color: var(--secondary);
   position: relative;
   right: 5px;
@@ -285,13 +285,14 @@ input[type=file] {
 
 
 .fa-paper-plane, .fa-location-crosshairs, .fa-image{
-  font-size: 1.5em;
+  font-size: 1.5rem;
   padding: 5px;
   color: var(--secondary);
   cursor: pointer;
 }
-.fa-paper-plane{
-  font-size: 2em;
+
+.fa-location-dot{
+  font-size: 2rem;
 }
 
 .image {
@@ -304,7 +305,7 @@ input[type=file] {
   .reactions{
     position: absolute;
     bottom: 0px;
-    font-size: 0.7em;
+    font-size: 0.8rem;
     display: flex;
     flex-direction: row;
     background: #7f7f7fc2;
@@ -348,7 +349,7 @@ input[type=file] {
   .reactions{
     position: absolute;
     bottom: 0px;
-    font-size: 0.7em;
+    font-size: 0.8rem;
     display: flex;
     flex-direction: row;
     background: #7f7f7fc2;
@@ -379,7 +380,7 @@ input[type=file] {
   justify-content: space-between;
   color: #698ea5;
   .emoticon{
-    font-size: 1.3em;
+    font-size: 1.3rem;
     &:hover{
       cursor: pointer;
     }
@@ -455,34 +456,12 @@ input[type=file] {
   justify-content: center;
 }
 
-
-.location__message{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.location__message__title{
-  padding-left: 10px;
-  display: flex;
-  margin-bottom: 5px;
-  background: black;
-  mix-blend-mode: screen;
-  -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
 .server__message{
   text-align: center;
 }
 
 .server__message__body{
-  font-size: 0.7em;
+  font-size: 0.7rem;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -500,7 +479,7 @@ scrollbar-width: none;  /* Firefox */
 .menu{
   display: block;
   color: limegreen;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   &:hover{
     cursor: pointer;
   }
@@ -526,7 +505,7 @@ scrollbar-width: none;  /* Firefox */
 
 .time{
   width: max-content;
-  font-size: 0.6em;
+  font-size: 0.6rem;
   text-align: center;
   color: gray;
   position: absolute;
@@ -557,10 +536,10 @@ scrollbar-width: none;  /* Firefox */
 
 #typingindicator{
   list-style-type: none;
-  color: grey;
-  font-size: 0.7em;
+  color: rgb(173, 173, 173);
+  font-size: 0.8rem;
   padding: 0 0 0 10px;
-  height: 25px;
+  //height: 25px;
   li{
     display: flex;
     flex-direction: row;
@@ -574,15 +553,13 @@ scrollbar-width: none;  /* Firefox */
   filter: invert(1);
 }
 
-#retlocation{
-  filter: invert(1);
-  height: 40px;
-  width: 40px;
-}
 
 #retlocflex{
   display: flex;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2px;
 }
 
 #messages{
@@ -626,7 +603,6 @@ scrollbar-width: none;  /* Firefox */
       background: #26313d;
       padding: 10px 15px;
       border-radius: 25px;
-      font-size: 0.7em;
       &:hover::after{
         left: 90%;
       }
@@ -635,7 +611,6 @@ scrollbar-width: none;  /* Firefox */
       background: var(--secondary);
       padding: 10px 15px;
       border-radius: 25px;
-      font-size: 0.7em;
     }
     .main-message{
       display: flex;
@@ -650,8 +625,9 @@ scrollbar-width: none;  /* Firefox */
     }
     .replyMessage{
       padding: 10px 15px 25px 10px;
-      font-size: 0.7em;
+      font-size: 0.8rem;
       background: #3f5266;
+      color: #d1d1d1;
       border-radius: 15px 15px 15px 0px;
       z-index: 1;
       &:hover{
@@ -700,7 +676,7 @@ scrollbar-width: none;  /* Firefox */
     }
 
     .title h3{
-      font-size: 0.7em;
+      font-size: 0.8rem;
     }
     .message__title h3{
       width: 100%;
@@ -748,7 +724,7 @@ scrollbar-width: none;  /* Firefox */
   transform: translate(-50%, -50%);
   border-radius: 25px;
   gap: 10px;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   filter: drop-shadow(2px 4px 6px black);
   z-index: 10;
   & > div{
@@ -796,7 +772,7 @@ scrollbar-width: none;  /* Firefox */
   .reactions{
     position: absolute;
     bottom: 0px;
-    font-size: 0.7em;
+    font-size: 0.8rem;
     display: flex;
     flex-direction: row;
     background: #7f7f7fc2;
@@ -816,7 +792,7 @@ scrollbar-width: none;  /* Firefox */
   background: #000000bb;
   padding: 10px;
   border-radius: 15px;
-  font-size: 0.6em;
+  font-size: 0.6rem;
   transform: translateX(-50%);
   z-index: 100;
   backdrop-filter: blur(2px);
@@ -835,18 +811,18 @@ scrollbar-width: none;  /* Firefox */
   padding: 5px 10px;
   border-radius: 25px;
   backdrop-filter: blur(2px);
-  font-size: 0.6em;
+  font-size: 0.8rem;
   transform: translateX(-50%);
   z-index: 100;
   gap: 10px;
   width: max-content;
   filter: drop-shadow(2px 4px 6px black);
   img{
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
   }
   .msg{
-    font-size: 0.7em;
+    font-size: 0.8rem;
   }
   &:hover{
     cursor: pointer;
@@ -886,6 +862,7 @@ scrollbar-width: none;  /* Firefox */
       color: var(--foreground);
       width: 100%;
       backdrop-filter: blur(2px);
+      font-size: 0.8rem;
       &:focus{
         outline: none;
       }
@@ -893,8 +870,12 @@ scrollbar-width: none;  /* Firefox */
   }
 }
 
+.object{
+  font-size: 0.8rem;
+}
+
 .maxuser{
-  font-size: 0.7em;
+  font-size: 0.8rem;
   position: relative;
   right: 0;
   width: 100%;
@@ -918,7 +899,7 @@ scrollbar-width: none;  /* Firefox */
   bottom: 50px;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 1em;
+  font-size: 1rem;
   backdrop-filter: blur(2px);
   filter: drop-shadow(2px 4px 6px black);
   z-index: 10;
@@ -969,10 +950,10 @@ img{
     text-overflow: ellipsis;
     .toast-popup-name{
       color: var(--secondary);
-      font-size: 0.7em;
+      font-size: 0.8rem;
     }
     .toast-popup-message{
-      font-size: 0.7em;
+      font-size: 0.8rem;
     }
   }
   .toast-popup-close{
