--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -48,7 +48,7 @@
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/css/main.min.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="/images/avatars/pikachu.png">
 
@@ -86,7 +86,6 @@
             <h2>Start typing messages!</h2>
           </div>
         </ol>
-        <ul id="typingindicator"></ul>
         <div class="toast-popup" style="display: none;">
           <div class="toast-popup-replying-to">
             <div class="toast-popup-name"></div>
@@ -96,6 +95,7 @@
         </div>
         <div class="popup-message" style="display: none;"></div>
         <div class="chat__footer">
+          <ul id="typingindicator"></ul>
           <form id="message-form">
             <!--input name="message" type="text" placeholder="Message" autofocus autocomplete="off" /-->
             <div class="location" id="send-location"><i class="fa-solid fa-location-crosshairs"></i></div>
@@ -235,6 +235,6 @@
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/src/main.min.js"></script>
+  <script defer src="/js/src/main.js"></script>
 </body>
 </html>
