--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -661,9 +661,9 @@ scrollbar-width: none;  /* Firefox */
       .time{
         left: 120%;
       }
-//.reactions{
- //       right: 0;
-  //    }
+      .reactions{
+        right: 0;
+       }
     }
     .my__message__body{
       display: flex;
