--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -236,5 +236,16 @@
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/src/main.js"></script>
+  <script>
+      window.location.hash = "no-back-button";
+  
+      // Again because Google Chrome doesn't insert
+      // the first hash into the history
+      window.location.hash = "Again-No-back-button"; 
+  
+      window.onhashchange = function(){
+          window.location.hash = "no-back-button";
+      }
+  </script>
 </body>
 </html>
