--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -67,9 +67,8 @@
   <div id="main-screen" style="visibility: hidden;">
     <div class="offline" style="display: none; background: orange;padding: 2px;width: 100%;text-align: center;position: fixed;top: 0; font-size: 0.7rem"></div>
     <div class="topbar">
-      <div class="topbar-wrapper">
+        <div class="back"><i class="fa-solid fa-chevron-left"></i></div>
         <div class="menu"></div>
-      </div>
     </div>
     <div class="menuwrapper">
       <div class="chat__sidebar">
@@ -237,14 +236,14 @@
   <script defer src="/js/libs/mustache.min.js"></script>
   <script defer src="/js/src/main.js"></script>
   <script>
-      window.location.hash = "no-back-button";
-  
-      // Again because Google Chrome doesn't insert
-      // the first hash into the history
-      window.location.hash = "Again-No-back-button"; 
+      window.location.hash = "inbox";
+
+      setTimeout(function () {
+          window.location.hash = "again-inbox";
+      }, 2000);
   
       window.onhashchange = function(){
-          window.location.hash = "no-back-button";
+          window.location.hash = "inbox";
       }
   </script>
 </body>
