--- a/public/css/main.css
+++ b/public/css/main.css
@@ -340,6 +340,14 @@ input[type=file] {
   cursor: pointer;
 }
 
+.back {
+  cursor: pointer;
+}
+
+.back .fa-chevron-left {
+  color: var(--secondary);
+}
+
 .fa-location-dot {
   font-size: 2rem;
 }
@@ -376,7 +384,7 @@ input[type=file] {
   background: #7f7f7fc2;
   min-width: 15px;
   border-radius: 10px;
-  right: 0;
+  left: 0;
 }
 
 .image .time {
@@ -458,7 +466,7 @@ input[type=file] {
   background: #7f7f7fc2;
   min-width: 15px;
   border-radius: 10px;
-  left: 0;
+  right: 20px;
 }
 
 .my__image .time {
@@ -676,23 +684,6 @@ input[type=file] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  padding-top: 20px;
-  width: 100%;
-  background: transparent;
-  z-index: 10;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.topbar .topbar-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -700,11 +691,14 @@ input[type=file] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: absolute;
+  padding: 10px 15px;
+  width: 100%;
+  background: transparent;
+  z-index: 10;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0 20px;
-  width: 100%;
 }
 
 .menuwrapper2 {
@@ -775,7 +769,6 @@ input[type=file] {
   scroll-behavior: smooth;
   list-style-type: none;
   gap: 2px;
-  margin-top: 50px;
 }
 
 #messages .message, #messages .my__message {
@@ -906,7 +899,7 @@ input[type=file] {
 }
 
 #messages .message .reactions {
-  right: 0;
+  left: 0;
 }
 
 #messages .my__message__body {
@@ -1078,6 +1071,7 @@ input[type=file] {
 .message .reactions, .my__message .reactions {
   position: absolute;
   bottom: 0px;
+  right: 20px;
   font-size: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1086,6 +1080,12 @@ input[type=file] {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: #7f7f7fc2;
   min-width: 15px;
   border-radius: 10px;
@@ -1372,7 +1372,8 @@ img {
     padding-top: 0;
   }
   .topbar {
-    padding: 20px 25%;
+    background: transparent;
+    padding: 10px 25%;
   }
   .menuwrapper {
     width: 25%;
