--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -571,6 +571,7 @@ scrollbar-width: none;  /* Firefox */
     -webkit-overflow-scrolling: touch;
     padding: 0 10px;
     //margin-bottom: 20px;
+    margin-top: 50px;
     display: grid;
     grid-auto-flow: row;
     flex-grow: 1;
