--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -48,7 +48,7 @@
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.min.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="/images/avatars/pikachu.png">
 
@@ -143,7 +143,7 @@
         <div class="angry">😠</div>
       </div>
 
-      <div class="reactorContainer" style="display: none;">Reactions on this message <ul></ul></div>
+      <div class="reactorContainer" style="display: none;">Reactions <ul></ul></div>
     
       <template id="message-template" type="text/template">
         <li class="message _message" id="{{id}}">
@@ -234,7 +234,7 @@
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/src/main.js"></script>
+  <script defer src="/js/src/main.min.js"></script>
   <script>
     window.location.hash = "inbox";
   
