--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -703,7 +703,7 @@ scrollbar-width: none;  /* Firefox */
     }
     .textMessage, .replyMessage{
       max-width: 50vw;
-      text-align: justify;
+      //text-align: justify;
       word-wrap: break-word;
     }
 }
