--- a/public/views/layout/header.ejs
+++ b/public/views/layout/header.ejs
@@ -1,6 +1,6 @@
 <meta name="theme-color" content="#111d2a" />
 <!--social media preview tag-->
-<meta name="title" content="Instant Chatting App"/>
+<meta name="title" content="<%= title %>  | PokeTab Messanger"/>
 <meta name="description" content="This is a temporary instant chatting app where you can chat also in groups. There is no database so any of your chat is not stored. ">
 <meta property="og:title" content="Instant Chatting App" />
 <meta property="og:description" content="This is a temporary instant chatting app where you can chat also in groups. There is no database so any of your chat is not stored. ">
