--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,7 +64,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-bottom: 100px;
+  min-height: 100vh;
 }
 
 .intro h2 {
