--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -50,7 +50,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-bottom: 100px;
+  min-height: 100vh;
   h2{
     font-size: 1.5rem;
     text-align: center;
