--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -861,11 +861,10 @@ scrollbar-width: none;  /* Firefox */
     margin-bottom: 10px;
     background: transparent;
     #textbox{
-      max-height: 100px;
-      max-height: 100px;
+      max-height: 120px;
+      min-height: 50px;
       border-radius: 25px;
       padding: 5px 35px;
-      height: auto;
       outline: none;
       resize: none;
       background: var(--focus);
