--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -87,12 +87,13 @@
       </div>
 
       <div class="reactionContainer" style="display: none;">
-        <div class="senti">👍🏻</div>
+        <div class="love">❤️</div>
         <div class="haha">😂</div>
         <div class="sad">😢</div>
         <div class="wow">😮</div>
-        <div class="love">❤️</div>
         <div class="angry">😠</div>
+        <div class="like">👍🏻</div>
+        <div class="dislike">👎🏻</div>
       </div>
 
       <div class="reactorContainer" style="display: none;">Reactions <ul></ul></div>
