Update minor version 3

--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -126,6 +126,18 @@ body {
   min-height: 44px;
 }
 
+.source-code{
+  position: relative;
+  text-align: right;
+  width: 100%;
+  padding: 10px;
+  a{
+    color: white;
+    font-size: 2rem;
+  }
+}
+
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus,
