--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -5,6 +5,9 @@
 </head>
 <body>
     <div class="offline" style="display: none; background: orange;padding: 2px;width: 100%;text-align: center;position: fixed;top: 0; z-index:1000; font-size: 0.7rem"></div>
+    
+    <div class="source-code"><a href="http://github.com/itsfuad/poketab/" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+
     <div class="container">
         <form action="/chat" method="post" autocomplete="off" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
@@ -13,7 +16,7 @@
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
-                    <label for="key" id="key-label">Tap to Copy</label>
+                    <label for="key" id="key-label">Tap to Copy <i class="fa-regular fa-clone"></i></label>
                     <input type="text" name="key" value="Generating Key" class="copy-key" id="key" minlength="10" maxlength="10" readonly>
                 </div>
                 <div class="form-field">
@@ -45,6 +48,6 @@
         </form>
     </div>
     <%- include("layout/footer") %> 
-    <script defer src="/js/src/create.min.js"></script>
+    <script defer src="/js/src/create.js"></script>
 </body>
 </html>
