--- a/public/css/login.css
+++ b/public/css/login.css
@@ -169,6 +169,18 @@ body {
   min-height: 44px;
 }
 
+.source-code {
+  position: relative;
+  text-align: right;
+  width: 100%;
+  padding: 10px;
+}
+
+.source-code a {
+  color: white;
+  font-size: 2rem;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
