--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -182,12 +182,12 @@
       
     </div>
   </div>
-  <script defer src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
+  <script async src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/src/main.min.js"></script>
+  <script defer src="/js/src/main.js"></script>
   <script>
     window.location.hash = "inbox";
   
