--- a/public/views/layout/header.ejs
+++ b/public/views/layout/header.ejs
@@ -41,7 +41,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
-<link rel="stylesheet" href="/css/login.min.css">
+<link rel="stylesheet" href="/css/login.css">
+<script async src="/js/libs/fontawesome.js"></script>
 <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 <link rel="icon" href="/images/avatars/pikachu.png">
 <title><%= title %>  | PokeTab Messanger</title>
