--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -43,6 +43,6 @@
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/css/main.min.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="/images/avatars/pikachu.png">
