patch user type

--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -48,6 +48,6 @@
         </form>
     </div>
     <%- include("layout/footer") %> 
-    <script defer src="/js/src/create.js"></script>
+    <script defer src="/js/src/create.min.js"></script>
 </body>
 </html>
