--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -46,7 +46,7 @@
         </form>
     </div>
     <%- include("layout/footer") %>
-    <script defer src="/js/src/login.js"></script>
+    <script defer src="/js/src/login.min.js"></script>
     <% if (key) { %>
         <script>
             document.addEventListener("DOMContentLoaded", ()=>{
