--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -43,6 +43,25 @@
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.min.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="/images/avatars/pikachu.png">
+  <script async src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
+  <script defer src="/js/libs/moment.min.js"></script>
+  <script defer src="/js/libs/mustache.min.js"></script>
+  <script defer src="/js/src/main.min.js"></script>
+  <script>
+    window.location.hash = "inbox";
+  
+    console.log(window.location.hash);
+    setTimeout(function () {
+        window.location.hash = "again-inbox";
+        console.log(window.location.hash);
+    }, 2000);
+    window.onhashchange = function(){
+        window.location.hash = "inbox";
+        console.log(window.location.hash);
+    }
+  </script>
