--- a/public/views/block.ejs
+++ b/public/views/block.ejs
@@ -1,6 +1,4 @@
-<img src="./../images/timer.gif" height="80px" width="80px">
-<div>Too many request</div>
-<div>Try after some time</div>
+<div>Smart Try. Fuck off...!!</div>
 <style>
     body{
         display: flex;
