--- a/public/views/layout/footer.ejs
+++ b/public/views/layout/footer.ejs
@@ -13,6 +13,7 @@
 </fieldset>
 <div class="popup-message" style="display: none;"></div>
 <div class="footer">
+    <div class="source-code"><a href="http://github.com/itsfuad/poketab/" target="_blank">Source Code <i class="fa-solid fa-code-branch"></i></a></div>
     <p>&copy; Copyright Fuad Hasan 2022. All rights reserved. <%=version%></p>
 </div>
 <script defer src="/socket.io/socket.io.js"></script>
