--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -6,7 +6,7 @@
 
 :root{
   --primary-dark: #111d2a;
-  --foreground-dark: #ffffff;
+  --foreground-dark: #e1eeff;
   --secondary-dark: #4598ff;
   --focus--dark: #192838bd;
   --red: #cd4040;
@@ -54,6 +54,7 @@ body {
   h2{
     font-size: 1.5rem;
     text-align: center;
+    color: var(--foreground);
   }
 }
 
@@ -104,7 +105,6 @@ button:hover {
 
 .chat__sidebar ul{
   list-style-type: none;
-  border-top: 2px solid var(--focus);
   margin: 5px;
   overflow-y: scroll;
   li{
@@ -176,8 +176,29 @@ button:disabled {
   }
 }
 
+.leave{
+  position: absolute;
+  bottom: 0;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  button{
+    border-radius: 5px;
+    background: orangered;
+    padding: 5px 10px;
+    &:hover{
+      background: red;
+    }
+  }
+}
+
 .users{
-  overflow: scroll;
+  overflow-y: scroll;
+  max-height: 75%;
+  overflow-x: hidden;
+  border-top: 2px solid var(--focus);
 }
 
 .chat__sidebar li {
@@ -291,12 +312,9 @@ input[type=file] {
   cursor: pointer;
 }
 
-.back{
-
-  cursor: pointer;
-  .fa-chevron-left{
-    color: var(--secondary);
-  }
+.currently_active{
+  font-size: 0.8rem;
+  color: var(--foreground);
 }
 
 
@@ -488,8 +506,11 @@ scrollbar-width: none;  /* Firefox */
 
 .menu{
   display: block;
-  color: limegreen;
-  font-size: 0.9rem;
+  font-size: 1rem;
+  width: 30px;
+  text-align: center;
+  padding: 5px;
+  border-radius: 50%;
   &:hover{
     cursor: pointer;
   }
@@ -501,7 +522,7 @@ scrollbar-width: none;  /* Firefox */
   left: -100%;
   background: var(--option-color);
   backdrop-filter: blur(10px);
-  width: 60%;
+  width: 70%;
   transition: 200ms;
   z-index: 11;
   .chat__sidebar{
