--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -22,7 +22,7 @@
                             <div class="create-chat">
                 <fieldset class="line">
                     <legend class="h1">Or</legend>
-                    <a id="create" href="/login">Join chat</a>
+                    <a id="create" href="/login" onclick="route()">Join chat</a>
                 </fieldset>
             </div>
             </div>
@@ -46,5 +46,6 @@
     </div>
     <%- include("layout/footer") %> 
     <script defer src="/js/src/create.min.js"></script>
+    <script src="/js/src/router.js"></script>
 </body>
 </html>
