--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -14,7 +14,7 @@
                 </div>
                 <div class="form-field">
                     <label for="key" id="key-label">Tap to Copy <i class="fa-regular fa-clone"></i></label>
-                    <input type="text" name="key" placeholder="Generating Key" class="copy-key" id="key" minlength="10" maxlength="10" readonly>
+                    <input type="text" name="key" class="copy-key" id="key" value="<%=key_%> " readonly>
                 </div>
                 <div class="form-field">
                     <input type="button" value="Next" id="next">
