--- a/public/views/layout/footer.ejs
+++ b/public/views/layout/footer.ejs
@@ -1,14 +1,13 @@
 <fieldset class="howtouse line"> 
     <legend class="h1">How to use</legend>
     <ul>
-        <li>Copy the generated Key to and share with your friends to join your chat.</li>
         <li>Conversation will be deleted from your device after you disconnect/exit.</li>
         <li>You cannot see previous messages after re joining.</li>
         <li>You can vibrate other users phone by tapping ther name from the active online users list.</li>
         <li>On Pc, use can use Ctrl+Enter to send message.</li>
-        <li>Deleting messages will be deleted for everyone on the current chat.</li>
+        <li>Messages will be deleted for everyone on the current chat by clicking trash icon.</li>
         <li>From 2 to 15 people can join on the same chat. You can limit the maximum peoples who can join.</li>
-        <li>Session key will expire after 10 seconds if there's no one on the chat.</li>
+        <li>Session key will be expired immediately if there's no one on the chat.</li>
     </ul>
 </fieldset>
 <div class="popup-message" style="display: none;"></div>
