--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -51,10 +51,15 @@
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/src/main.min.js"></script>
+  <script defer src="/js/src/main.js"></script>
   <script>
+    const myname = "<%=myname%>";
+    const mykey = "<%=mykey%>";
+    const myavatar = "<%=myavatar%>";
+    const maxuser = "<%=maxuser%>";
+    const myid = "<%=myid%>";
+    
     window.location.hash = "inbox";
-  
     console.log(window.location.hash);
     setTimeout(function () {
         window.location.hash = "again-inbox";
