--- a/public/css/main.css
+++ b/public/css/main.css
@@ -711,13 +711,11 @@ input[type=file] {
 }
 
 .topbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  -ms-grid-columns: 1fr .1fr;
+      grid-template-columns: 1fr .1fr;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -729,6 +727,104 @@ input[type=file] {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.call {
+  height: 40px;
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.call:hover {
+  cursor: pointer;
+}
+
+.call-sandbox {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  bottom: -100%;
+  background: #111d2a;
+  z-index: 100;
+  -webkit-transition: 300ms;
+  transition: 300ms;
+}
+
+.call-sandbox.active {
+  top: 0;
+}
+
+.call-sandbox .call-controls {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  -ms-grid-columns: 1fr 1fr 0.1fr;
+      grid-template-columns: 1fr 1fr 0.1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  width: 100%;
+  padding: 20px;
+  background: #26313d;
+}
+
+.call-sandbox .call-controls > div:hover {
+  cursor: pointer;
+}
+
+.call-sandbox .call-container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.call-sandbox .stream {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+}
+
+.call-sandbox .stream > div {
+  height: 100px;
+  width: 100px;
+  background: black;
+  border-radius: 50%;
+}
+
+.call-sandbox .stream video {
+  height: 100px;
+  border-radius: 10px;
 }
 
 .menuwrapper2 {
