--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -543,8 +543,9 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .topbar{
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr .1fr;
   align-items: center;
   position: absolute;
   padding: 10px 15px;
@@ -552,6 +553,72 @@ scrollbar-width: none;  /* Firefox */
   background: transparent;
   z-index: 10;
   justify-content: space-between;
+}
+
+
+.call{
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    cursor: pointer;
+  }
+}
+
+.call-sandbox{
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  bottom: -100%;
+  background: #111d2a;
+  z-index: 100;
+  transition: 300ms;
+  &.active{
+    top: 0;
+  }
+  .call-controls{
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns:1fr 1fr 0.1fr;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    padding: 20px;
+    background: #26313d;
+    & > div{
+      &:hover{
+        cursor: pointer;
+      }
+    }
+  }
+  .call-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .stream{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    gap: 10px;
+    & > div{
+      height: 100px;
+      width: 100px;
+      background: black;
+      border-radius: 50%;
+    }
+    video{
+      height: 100px;
+      border-radius: 10px;
+    }
+  }
 }
 
 .menuwrapper2{
