--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -122,7 +122,7 @@
               <p class="textMessage object">{{{text}}}</p>
               <div class="reactor" style="display: none;"><ul></ul></div>
               <ul class="reactions"></ul>
-              <i class="fa-regular fa-circle-check sent"></i>
+              <i class="fa-regular fa-paper-plane sent"></i>
             </div>
           </div>
           
@@ -173,7 +173,7 @@
               <div class="imageMessage object">{{{image}}}</div>
               <div class="reactor" style="display: none;"><ul></ul></div>
               <ul class="reactions"></ul>
-              <i class="fa-regular fa-circle-check sent"></i>
+              <i class="fa-regular fa-paper-plane sent"></i>
             </div>
           </div>
         </li>
