--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,10 +334,11 @@ input[type=file] {
 }
 
 .sent {
-  font-size: 0.6rem;
-  color: var(--secondary);
-  position: relative;
-  right: 5px;
+  font-size: 0.6rem !important;
+  color: #e1eeff !important;
+  position: relative !important;
+  right: -3px !important;
+  padding: 0 !important;
 }
 
 .imageMessage {
@@ -446,7 +447,6 @@ input[type=file] {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: 8px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -884,7 +884,6 @@ input[type=file] {
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
-  gap: 8px;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
